// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flavors.strict transforms input data 1`] = `Array []`;

exports[`flavors.strict transforms input data if extraneous values are excluded 1`] = `Array []`;

exports[`flavors.strict validates required fields 1`] = `
Example {
  "falseBooleanValue": undefined,
  "nullableBooleanValue": undefined,
  "nullableDateStringValue": undefined,
  "nullableDateValue": undefined,
  "nullableEnumValue": undefined,
  "nullableIntegerValue": undefined,
  "nullableNestedValue": undefined,
  "nullableNumberValue": undefined,
  "nullableObjectArrayValue": undefined,
  "nullablePrimitiveArrayValue": undefined,
  "nullableStringValue": undefined,
  "nullableUUIDValue": undefined,
  "optionalBooleanValue": undefined,
  "optionalDateStringValue": undefined,
  "optionalDateValue": undefined,
  "optionalEnumValue": undefined,
  "optionalIntegerValue": undefined,
  "optionalNestedValue": undefined,
  "optionalNumberValue": undefined,
  "optionalObjectArrayValue": undefined,
  "optionalPrimitiveArrayValue": undefined,
  "optionalStringValue": undefined,
  "optionalUUIDValue": undefined,
  "requiredBooleanValue": undefined,
  "requiredDateStringValue": undefined,
  "requiredDateValue": undefined,
  "requiredEnumValue": undefined,
  "requiredIntegerValue": undefined,
  "requiredNestedValue": undefined,
  "requiredNumberValue": undefined,
  "requiredObjectArrayValue": undefined,
  "requiredPrimitiveArrayValue": undefined,
  "requiredStringValue": undefined,
  "requiredUUIDValue": undefined,
  "zeroBooleanValue": undefined,
}
`;

exports[`flavors.strict validates required fields 2`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isArray": "requiredObjectArrayValue must be an array",
      "isDefined": "requiredObjectArrayValue should not be null or undefined",
    },
    "property": "requiredObjectArrayValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isArray": "requiredPrimitiveArrayValue must be an array",
      "isDefined": "requiredPrimitiveArrayValue should not be null or undefined",
    },
    "property": "requiredPrimitiveArrayValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isBoolean": "falseBooleanValue must be a boolean value",
      "isDefined": "falseBooleanValue should not be null or undefined",
    },
    "property": "falseBooleanValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isBoolean": "zeroBooleanValue must be a boolean value",
      "isDefined": "zeroBooleanValue should not be null or undefined",
    },
    "property": "zeroBooleanValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isBoolean": "requiredBooleanValue must be a boolean value",
      "isDefined": "requiredBooleanValue should not be null or undefined",
    },
    "property": "requiredBooleanValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "requiredDateStringValue should not be null or undefined",
      "isIso8601": "requiredDateStringValue must be a valid ISO 8601 date string",
    },
    "property": "requiredDateStringValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDate": "requiredDateValue must be a Date instance",
      "isDefined": "requiredDateValue should not be null or undefined",
    },
    "property": "requiredDateValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "requiredEnumValue should not be null or undefined",
      "isEnum": "requiredEnumValue must be a valid enum value",
    },
    "property": "requiredEnumValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "requiredIntegerValue should not be null or undefined",
      "isInt": "requiredIntegerValue must be an integer number",
    },
    "property": "requiredIntegerValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "requiredNestedValue should not be null or undefined",
    },
    "property": "requiredNestedValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "requiredNumberValue should not be null or undefined",
      "isNumber": "requiredNumberValue must be a number conforming to the specified constraints",
    },
    "property": "requiredNumberValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "requiredStringValue should not be null or undefined",
      "isString": "requiredStringValue must be a string",
    },
    "property": "requiredStringValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "requiredUUIDValue should not be null or undefined",
      "isUuid": "requiredUUIDValue must be a UUID",
    },
    "property": "requiredUUIDValue",
    "target": Example {
      "falseBooleanValue": undefined,
      "nullableBooleanValue": undefined,
      "nullableDateStringValue": undefined,
      "nullableDateValue": undefined,
      "nullableEnumValue": undefined,
      "nullableIntegerValue": undefined,
      "nullableNestedValue": undefined,
      "nullableNumberValue": undefined,
      "nullableObjectArrayValue": undefined,
      "nullablePrimitiveArrayValue": undefined,
      "nullableStringValue": undefined,
      "nullableUUIDValue": undefined,
      "optionalBooleanValue": undefined,
      "optionalDateStringValue": undefined,
      "optionalDateValue": undefined,
      "optionalEnumValue": undefined,
      "optionalIntegerValue": undefined,
      "optionalNestedValue": undefined,
      "optionalNumberValue": undefined,
      "optionalObjectArrayValue": undefined,
      "optionalPrimitiveArrayValue": undefined,
      "optionalStringValue": undefined,
      "optionalUUIDValue": undefined,
      "requiredBooleanValue": undefined,
      "requiredDateStringValue": undefined,
      "requiredDateValue": undefined,
      "requiredEnumValue": undefined,
      "requiredIntegerValue": undefined,
      "requiredNestedValue": undefined,
      "requiredNumberValue": undefined,
      "requiredObjectArrayValue": undefined,
      "requiredPrimitiveArrayValue": undefined,
      "requiredStringValue": undefined,
      "requiredUUIDValue": undefined,
      "zeroBooleanValue": undefined,
    },
    "value": undefined,
  },
]
`;
